--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+/bin/
+
+#other
+.cache-main
+.classpath
+.project
+.settings/
