--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,4 +13,7 @@ log4j.appender.F1.layout.ConversionPattern=%d{[HH:mm:ss,SSS]} %-5p {%c{1}} %m%n
 # levels: TRACE, DEBUG, INFO, WARN, ERROR, FATAL 
 
 # We trace everything in the log file
-log4j.rootLogger=INFO, F1
+#LOCALLY
+#log4j.rootLogger=INFO, F1
+#CLUSTER
+log4j.rootLogger=INFO, C1
